--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
-    "@ant-design/pro-components": "^2.0.0",
+    "@ant-design/pro-components": "1.1.1",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.20.0",
     "classnames": "^2.3.0",
